// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should handle HIDE_ALERT 1`] = `undefined`;

exports[`App should handle SHOW_ALERT 1`] = `undefined`;

exports[`App should handle persist/REHYDRATE with payload 1`] = `
Object {
  "rehydrated": true,
}
`;

exports[`App should handle persist/REHYDRATE without payload 1`] = `
Object {
  "rehydrated": true,
}
`;

exports[`App should return the initial state 1`] = `
Object {
  "rehydrated": false,
}
`;
